chore(backend)[PW-38]: Implement API for host access management - WIP
